likes fix + contact me move upper

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         
                 <div id="like" style="width: 15%; margin-top:60px; margin-left: 1000px;" class="borderdes">
                 <img style="margin-left: -10px; width: 70%;"id="qrcode" src="assets/qr.png">
-                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div></div>
+                <div class="fb-like" data-href="https://sise-web-development-environments.github.io/assignment1-davidZal1992/" data-width="" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div></div>
         <div id="fb-root"></div>
         <script async defer crossorigin="anonymous" src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v6.0"></script>
   </body>
