--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                                 <a href="./assets/my1.jpg" data-lightbox="image-1"><img src="./assets/mini1.jpg"></a>
                                 <a href="./assets/my2.jpg" data-lightbox="image-1"><img src="./assets/my2mini.jpg"></a>
                                 <a href="./assets/my3.jpg" data-lightbox="image-1"><img src="./assets/my3mini.jpg"></a>
-                                <a href="./assets/my3.jpg" data-lightbox="image-1"><img src="./assets/my3mini.jpg"></a>
-                                <a href="./assets/my3.jpg" data-lightbox="image-1"><img src="./assets/my3mini.jpg"></a>
-                                <a href="./assets/my3.jpg" data-lightbox="image-1"><img src="./assets/my3mini.jpg"></a>
-                                <a href="./assets/my3.jpg" data-lightbox="image-1"><img src="./assets/my3mini.jpg"></a>
-                                <a href="./assets/my3.jpg" data-lightbox="image-1"><img src="./assets/my3mini.jpg"></a>
+                                <a href="./assets/my4.jpg" data-lightbox="image-1"><img src="./assets/my4mini.jpg"></a>
+                                <a href="./assets/my5.jpg" data-lightbox="image-1"><img src="./assets/my5mini.jpg"></a>
+                                <a href="./assets/my6.jpg" data-lightbox="image-1"><img src="./assets/my6mini.jpg"></a>
+                                <a href="./assets/my7.jpg" data-lightbox="image-1"><img src="./assets/my7mini.jpg"></a>
+                                <a href="./assets/mypic8.jpg" data-lightbox="image-1"><img src="./assets/my8mini.jpg"></a>
                             </div>
                 </div>
         
