--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <h4  class=textdesign style="color:#472c15; font-size:80px;">Who am i?</h4>
                     <p class=textdesignblack><span class=first-letter>H</span>ello, my name is David Zaltsman and i am 27 years old. I am third grade student of Software and Information System engineering at Ben Gurion University
                        I`am highly motivated for learning and develop myself as a programmer.
-                    My hobbies are playing Tennis , spend time with my friends and beat them at FIFA 20.
-                My dream is to become a Web Developer , and i started to learn HTML,JS,React and little bit backend (Node.js, MongoDB) 
+                    My hobbies are playing Tennis , spend time with my friends and beat them at FIFA games.
+                My dream is to become a Web Developer , and i started to learn HTML,JS,React&Redux and little bit backend (Node.js, MongoDB) 
             and i very enjoy from do it. i hope that my dream will come true with a lot of hard work and with a lot of tools that i gonna gain from this course.</p>
                 </div>
                 <div id="myphotos" style="margin-top: 150px;" class="borderdes">
@@ -73,19 +73,12 @@
                     <p class="textdesign" style="color:black; font-weight: bold;"><span class=first-letter>M</span>edicines side effects Use Case:</p>
                     <p class="textdesignblack"> <span class=first-letter>A</span>nswer:<br>
                     Web 1.0<br>
-                    1.Query: Corona<br>
-                    2. Return the all static pages that include exactly result for Corona (Beer)<br>
-                    3. Fast search : Apple<br>
-                    4. The result page will not be compatiable to the user<br>
-                    5. The pages will include the spesific word without give any meaning <br>
-                    6. A lot of pages will retrive<br>
-                   <br>Web 1.0</br>
-                    1.Query: Corona<br>
-                    2. Return the all static pages that include exactly result for Corona (Beer)<br>
-                    3. Fast search : Apple<br>
-                    4. The result page will not be compatiable to the user<br>
-                    5. The pages will include the spesific word without give any meaning <br>
-                    6. A lot of pages will retrive<br>
+                    1.Query: "Medication side effects"<br>
+                    2. Return the all static pages with explanations about "Medication side effects"<br>
+                   <br>Web 3.0</br>
+                    1.Query: "Medication side effects"<br>
+                    2. Return results based on medical database medications side effects which based on more than billion user posts<br>
+                    3. Posts are indexed and organized in unified medical DB<br>
                 </p>
 
                 </div>
