--- a/index.html
+++ b/index.html
@@ -37,15 +37,14 @@
                     <h4  class=textdesign style="color:#472c15; font-size:80px;">Who am i?</h4>
                     <p class=textdesignblack>
                         <span class="first-letter">I</span> am Jacob Kalamitzks I was born on 6.6.1935 in the town of Kaunas, Lithuania, i am almost 85 years old and live in Rishon Lezion since 1977.
-                        There I worked at the Electric Company until 1977.
-                        after that year we moved to Rishon Lezion and continued my service at the Electric Company until June 30, 2000.
+                        I immigrated to Israel in 1972 on June 15 and after a month moved to Eilat. There I worked at the Electric Company until 1977.
+                        after that we moved to Rishon Lezion and i continued my service at the Electric Company until June 30, 2000.
                         I retired and that year I started volunteering at "Assaf Harofe" Hospital (now "Shamir").
                         While i'm volunteering at the "Assaf Harofe" hosptial, I was asked by one of my friends (who moved from "Assaf Harofe" to "Shmuel Harofe" hospital  to come and volunteer with them at "Shmuel Harofe", and since from then (about 12 years ago)
-                        I continue to volunteer at both hospitals ("Assaf Harofe" for almost 20 years and "Shmuel Harofe"  for about 12 years).
-                        Unfortunately, the "Corona" virus interrupt my volunteering at both hospitals. 
-                        The Corona Your Name and Memory interrupted my continued volunteering at both schools.
-                        I really hope it ends soon and i will able to continue my volunteering.
-                        My family was made up of three people - my wife Edna, my daughter Ariella and I.
+                        i continue to volunteer at both hospitals ("Assaf Harofe" for almost 20 years and "Shmuel Harofe"  for about 12 years).
+                        Unfortunately, the "Corona" virus interrupt my volunteering at both hospitals,
+                        and i really hope it ends soon and i will able to continue my volunteering.
+                        My family was composed of three people:- my wife Edna, my daughter Ariella and I.
                         My wife Edna was passed away about 27 years ago and my only daughter Ariella was passed away about 8 years ago.
                         I was left alone with the support of my son-in-law and my two grandchildren Edna and Hagai.
                         My hobbies are: walking (now less because of age), listen to calssical music (israeli and russian songs),  reading books , use "Whatsapp" and email.
