--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <h4  class=textdesign style="color:#472c15; font-size:80px;">Who am i?</h4>
                     <p class=textdesignblack>
                         <span class="first-letter">I</span> am Jacob Kalamitzks I was born on 6.6.1935 in the town of Kaunas, Lithuania, i am almost 85 years old and live in Rishon Lezion since 1977.
-                        I immigrated to Israel in 1972 on June 15 and after a month moved to Eilat. There I worked at the Electric Company until 1977.
+                        I immigrated to Israel in 1972 on June 15 and after a month i moved to Eilat. There I worked at the Electric Company until 1977.
                         after that we moved to Rishon Lezion and i continued my service at the Electric Company until June 30, 2000.
-                        I retired and that year I started volunteering at "Assaf Harofe" Hospital (now "Shamir").
+                        I retired and from that year I started volunteering at "Assaf Harofe" Hospital (now "Shamir").
                         While i'm volunteering at the "Assaf Harofe" hosptial, I was asked by one of my friends (who moved from "Assaf Harofe" to "Shmuel Harofe" hospital  to come and volunteer with them at "Shmuel Harofe", and since from then (about 12 years ago)
                         i continue to volunteer at both hospitals ("Assaf Harofe" for almost 20 years and "Shmuel Harofe"  for about 12 years).
                         Unfortunately, the "Corona" virus interrupt my volunteering at both hospitals,
